updated default example styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);@import url(https://fonts.googleapis.com/css?family=Lato);@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -11360,7 +11360,7 @@ html,
 body {
   background-color: #ffffff;
   color: #636b6f;
-  font-family: "Nunito", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 200;
   height: 100vh;
   margin: 0;
@@ -11379,7 +11379,6 @@ body {
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-decoration: none;
-  text-transform: uppercase;
 }
 
 .full-height {
