--- a/resources/sass/base/landing/_mixins.scss
+++ b/resources/sass/base/landing/_mixins.scss
@@ -2,5 +2,5 @@
 
 // Font Mixins
 @mixin body-font {
-    font-family: 'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
