--- a/resources/sass/base/landing/_variables.scss
+++ b/resources/sass/base/landing/_variables.scss
@@ -2,8 +2,8 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-nunito: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+$font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-size: 0.9rem;
 $font-weight-base: 200;
 $line-height-base: 1.6;
 
