--- a/resources/sass/layouts/landing/_header.scss
+++ b/resources/sass/layouts/landing/_header.scss
@@ -8,10 +8,9 @@
     a {
         color: $grey;
         padding: 0 25px;
-        font-size: $font-size-base;
+        font-size: $font-size;
         font-weight: 600;
         letter-spacing: .1rem;
         text-decoration: none;
-        text-transform: uppercase;
     }
 }
